tests/fixtures/invalid/none_bitor_list.py
# Cannot bitwise OR None and List[int]
x: None = None | [1, 2, 3]
